# cli_app

./: Cargo.toml
docs/: commands.md
src/: main.rs  prompt.rs
src/commands/: clear.rs  generate.rs  invoke.rs  load.rs  mod.rs  query.rs  save.rs  test.rs  watch.rs
