[package]
name = "cli_app_basab"
version = "0.1.1"
edition = "2024"
description = "A sample CLI app in Rust with interactive prompts"
license = "MIT"
repository = "https://github.com/dattaray-basab/cli_app"

[[bin]]
name = "cli_app"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
